@@ -2730,9 +2730,10 @@ sub cmdSkills {
 		$msg .=   "  # Skill Name                     Lv      SP\n";
 		for my $handle (@skillsID) {
 			my $skill = Skills->new(handle => $handle);
+			my $sp = $char->{skills}{$handle}{sp} || '';
 			$msg .= swrite(
 				"@>> @<<<<<<<<<<<<<<<<<<<<<<<<<<<< @>>    @>>>",
-				[$skill->id, $skill->name, $char->{skills}{$handle}{lv}, $skillsSP_lut{$handle}{$char->{skills}{$handle}{lv}}]);
+				[$skill->id, $skill->name, $char->{skills}{$handle}{lv}, $sp]);
 		}
 		$msg .= "\nSkill Points: $char->{points_skill}\n";
 		$msg .= "-------------------------------\n";
